# treegen

./: Cargo.toml  README.md
src/: lib.rs
src/generator/: branch_layer.rs  layer.rs  mod.rs  trunk_layer.rs
src/gui/: mod.rs
src/rendering/: canvas.rs  mod.rs  renderer.rs
src/rendering/impls/: image_canvas.rs  mod.rs  polygon_renderer.rs
src/sampler/: mod.rs
src/skeleton/: mod.rs  node.rs  parameters.rs  tree.rs
src/utils/: mod.rs  params.rs  quadtree.rs
