[package]
name = "treegen"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
cached = "0.44.0"
druid = { version = "0.8.3", features = ["image", "png"] }
image = "0.24.7"
imageproc = { version = "0.23.0", features = ["display-window"] }
indicatif = { version = "0.17.6", features = ["rayon"] }
nalgebra = "0.32.3"
num-complex = "0.4.4"
palette = "0.7.3"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
